@@ -6,6 +6,8 @@ xymon (4.3.28) stable; urgency=medium
      for standard TCP checks
    * Fix misparsing of --timelimit and --huge options in
      xymonnet (Reported by Foster Patch)
+   * Fix memory leak when processing netapp test reports 
+     (Reported by Peter Welter)
 
  -- Japheth Cleaver <cleaver-xymon@terabithia.org>  Thu, XX XXX 2016 15:00:00 -0700
 
